# pi-sentinel

./: .gitignore  Makefile  README.md  calibrate.py  ctest.py  gpsTest.py  gpsparse.py  install.sh  install_mp4box.sh  meson.build  omx.bash  pi-sentinel.cpp  pi-sentinel.hpp  requirements.txt  sentinel.c  sentinel.py  starmap.py  start.sh  testGPIO.py  update.py
public/: index.css  index.html  index.js  style.css
